[package]
name = "wyrm"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.2", features = ["derive"] }
futures = "0.3"
http = "0.2.6"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
scraper = "0.12.0"
tokio = { version = "1", features = ["full"] }
